--- a/styles/index.css
+++ b/styles/index.css
@@ -16,7 +16,8 @@
 
 @layer base {
   html {
-    font-family: Ingram, mono;
+    font-family: 'Inter';
+    font-weight: normal;
   }
 }
 
@@ -25,6 +26,89 @@
   src:  url("../public/fonts/ingram-mono/ingram-mono-regular.woff")  format('woff'),
         url("../public/fonts/ingram-mono/ingram-mono-regular.woff2")  format('woff2');
 }
+
+@font-face {
+  font-family: 'Inter';
+  src: url('../public/fonts/inter/Inter-Bold.woff2') format('woff2'),
+      url('../public/fonts/inter/Inter-Bold.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url('../public/fonts/inter/Inter-Black.woff2') format('woff2'),
+      url('../public/fonts/inter/Inter-Black.woff') format('woff');
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url('../public/fonts/inter/Inter-ExtraBold.woff2') format('woff2'),
+      url('../public/fonts/inter/Inter-ExtraBold.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url('../public/fonts/inter/Inter-ExtraLight.woff2') format('woff2'),
+      url('../public/fonts/inter/Inter-ExtraLight.woff') format('woff');
+  font-weight: 200;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url('../public/fonts/inter/Inter-Light.woff2') format('woff2'),
+      url('../public/fonts/inter/Inter-Light.woff') format('woff');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url('../public/fonts/inter/Inter-Medium.woff2') format('woff2'),
+      url('../public/fonts/inter/Inter-Medium.woff') format('woff');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url('../public/fonts/inter/Inter-Regular.woff2') format('woff2'),
+      url('../public/fonts/inter/Inter-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url('../public/fonts/inter/Inter-SemiBold.woff2') format('woff2'),
+      url('../public/fonts/inter/Inter-SemiBold.woff') format('woff');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url('../public/fonts/inter/Inter-Thin.woff2') format('woff2'),
+      url('../public/fonts/inter/Inter-Thin.woff') format('woff');
+  font-weight: 100;
+  font-style: normal;
+  font-display: swap;
+}
+
+
 
 .has-text-align-left {
   @apply text-left;
