--- a/styles/index.css
+++ b/styles/index.css
@@ -30,7 +30,23 @@
 }
 
 table {
-  @apply text-xs border-separate; 
+  @apply w-full text-xs md:text-sm text-left text-gray-500; 
+}
+
+thead {
+  @apply text-xs md:text-sm text-gray-700 uppercase bg-gray-50
+}
+
+th {
+  @apply py-2 px-2
+}
+
+tr {
+  @apply bg-white border-b 
+}
+
+td {
+  @apply py-4 px-2 
 }
 
 .has-text-align-left {
